package ProgettoSE;

public class Ingrediente extends Alimento{
    public Ingrediente(String nome, float qta, String misura) {
        super(nome, qta, misura);
    }
}
